--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,8 +1,3 @@
-.selected {
-  background-color: #cfd8dc !important;
-  color: #fff;
-}
-
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -13,17 +8,11 @@
 .heroes li {
   cursor: pointer;
   position: relative;
-  left: 0;
   background-color: #eee;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
-}
-
-.heroes li.selected:hover {
-  background-color: #bbd8dc !important;
-  color: #fff;
 }
 
 .heroes li:hover {
@@ -32,9 +21,16 @@
   left: .1em;
 }
 
-.heroes .text {
-  position: relative;
-  top: -3px;
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: fixed;
+  display: block;
+  width: 250px;
+}
+
+.heroes a:hover {
+  color: #607d9b;
 }
 
 .heroes .badge {
@@ -48,6 +44,8 @@
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
